fixed bug with z-index on popup

--- a/scss/_popup_card.scss
+++ b/scss/_popup_card.scss
@@ -6,7 +6,7 @@
   width: 90%;
   max-width: 767px;
 
-  z-index: 1000;
+  z-index: 100;
 
   overflow-y: auto;
 
